# artillery-unit-commander

./: .env.example  .gitignore  README.md  __init__.py  __main__.py  pyproject.toml  test.py
app/: __main__.py  args.py  config.py  database.py
app/commands/: Goals.py  Reports.py
app/helpers/: Cli.py
app/models/: Correction.py  Goal.py  Shot.py
config/: app.ini
resources/: artillery.db
tests/: GoalsTest.py
